crates/djls-semantic/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_absoluteurl.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "misago.core.templatetags.misago_absoluteurl::tag::absoluteurl":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: url_or_name
        required: true
        kind: Variable
        position: 0
      - name: args
        required: false
        kind: VarArgs
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
