crates/djls-semantic/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_batch.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "misago.core.templatetags.misago_batch::filter::batch":
    expects_arg: true
    arg_optional: false
  "misago.core.templatetags.misago_batch::filter::batchnonefilled":
    expects_arg: true
    arg_optional: false
block_specs: {}
