crates/djls-semantic/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_json.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "misago.core.templatetags.misago_json::filter::as_json":
    expects_arg: false
    arg_optional: false
block_specs: {}
